# floco

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.tpl  justfile
.github/workflows/: coverage.yml  rust.yml
src/: floco.rs  lib.rs
