[package]
name = "floco"
version = "0.1.0"
edition = "2021"
description = "Floco validates floats against constraints."
documentation = "https://docs.rs/floco/latest/floco/index.html"
readme = "README.md"
homepage = "https://github.com/RileyLeff/floco"
repository = "https://github.com/RileyLeff/floco"
license = "MIT OR Apache-2.0"
keywords = ["float", "validation", "wrapper", "utility"]
categories = ["no-std", "mathematics", "development-tools", "data-structures"]

[dependencies]
num-traits = { version = "0.2.17", default-features = false, features = ["libm"] }
serde = { version = "1.0.195", default-features = false, features = ["derive"] }

[dev-dependencies]
serde-json-core = "0.5.1"
half = {version = "2.3.1", features = ["num-traits"]}

[features]
default = ["libm"]
libm = ["num-traits/libm"]
std_math = ["num-traits/std"]
std_serde = ["serde/std"]
std = ["std_math", "std_serde"]
